--- a/requirements.txt
+++ b/requirements.txt
@@ -27,11 +27,12 @@ colorama=0.4.4=pypi_0
 crayons=0.4.0=pypi_0
 cryptography=37.0.1=py38hf6deb26_0
 cycler=0.11.0=pypi_0
-dash=0.39.0=py_0
-dash-core-components=0.44.0=py_0
-dash-html-components=0.14.0=py_0
+dash=2.4.1=pypi_0
+dash-bootstrap-components=1.1.0=pypi_0
+dash-core-components=2.0.0=pypi_0
+dash-html-components=2.0.0=pypi_0
 dash-renderer=0.20.0=py_0
-dash-table=3.6.0=py_0
+dash-table=5.0.0=pypi_0
 dataclasses=0.8=pyh6d0b6a4_7
 debugpy=1.5.1=py38he9d5cce_0
 decorator=5.1.1=pyhd3eb1b0_0
