--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
 agutil=4.1.1=pypi_0
+aiohttp=3.8.1=pypi_0
+aiosignal=1.2.0=pypi_0
 ansi2html=1.5.2=py38hecd8cb5_0
 anyio=3.6.1=pypi_0
 appnope=0.1.2=py38hecd8cb5_1001
@@ -9,6 +11,7 @@ argon2-cffi=21.3.0=pypi_0
 argon2-cffi-bindings=21.2.0=pypi_0
 astroid=2.11.5=pypi_0
 asttokens=2.0.5=pyhd3eb1b0_0
+async-timeout=4.0.2=pypi_0
 attrs=21.4.0=pypi_0
 babel=2.10.1=pypi_0
 backcall=0.2.0=pyhd3eb1b0_0
@@ -45,8 +48,12 @@ firecloud-dalmatian=0.0.17=pypi_0
 flask=2.0.3=pyhd3eb1b0_0
 flask-compress=1.4.0=py_0
 fonttools=4.33.3=pypi_0
+frozenlist=1.3.0=pypi_0
+fsspec=2022.3.0=pypi_0
+gcsfs=2022.3.0=pypi_0
 google-api-core=2.7.3=pypi_0
 google-auth=2.6.6=pypi_0
+google-auth-oauthlib=0.5.1=pypi_0
 google-cloud-core=2.3.0=pypi_0
 google-cloud-storage=2.3.0=pypi_0
 google-crc32c=1.3.0=pypi_0
@@ -88,6 +95,7 @@ mkl=2021.4.0=hecd8cb5_637
 mkl-service=2.4.0=py38h9ed2024_0
 mkl_fft=1.3.1=py38h4ab4a9b_0
 mkl_random=1.2.2=py38hb2f4e1b_0
+multidict=6.0.2=pypi_0
 nbclassic=0.3.7=pypi_0
 nbclient=0.6.3=pypi_0
 nbconvert=6.5.0=pypi_0
@@ -100,6 +108,7 @@ notebook-shim=0.1.0=pypi_0
 numexpr=2.8.1=py38h2e5f0a9_0
 numpy=1.21.5=py38h2e5f0a9_2
 numpy-base=1.21.5=py38h3b1a694_2
+oauthlib=3.2.0=pypi_0
 openssl=1.1.1o=hca72f7f_0
 packaging=21.3=pyhd3eb1b0_0
 pandas=1.4.2=py38he9d5cce_0
@@ -132,6 +141,7 @@ pytz=2021.3=pyhd3eb1b0_0
 pyzmq=22.3.0=py38he9d5cce_2
 readline=8.1.2=hca72f7f_1
 requests=2.27.1=pyhd3eb1b0_0
+requests-oauthlib=1.3.1=pypi_0
 retrying=1.3.3=pyhd3eb1b0_2
 rsa=4.6=pypi_0
 send2trash=1.8.0=pypi_0
@@ -156,6 +166,7 @@ werkzeug=2.0.3=pyhd3eb1b0_0
 wheel=0.37.1=pyhd3eb1b0_0
 wrapt=1.14.1=pypi_0
 xz=5.2.5=hca72f7f_1
+yarl=1.7.2=pypi_0
 zeromq=4.3.4=h23ab428_0
 zipp=3.8.0=pypi_0
 zlib=1.2.12=h4dc903c_2
