format clinical and sample data

--- a/example_notebooks/example_data/example_patient_reviewer_paired_clean_input.yaml
+++ b/example_notebooks/example_data/example_patient_reviewer_paired_clean_input.yaml
@@ -34,7 +34,7 @@ sample_columns:
   collection_date: pdb_collection_date_dfd
   # purity: wxs_purity
   # ploidy: wxs_ploidy
-  preservation_method:
+  preservation_method: pdb_preservation_method
   bait_set:
   sample_type:
 
