--- a/.github/workflows/deploy_ghcr_docker.yml
+++ b/.github/workflows/deploy_ghcr_docker.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Build and push image
         run: |
           docker login --username cchu70 --password ${{ secrets.GHCR_LOGIN_TOKEN }} ghcr.io
-          docker build . --tag ghcr.io/getzlab/AnnoMate:latest
-          docker push ghcr.io/getzlab/AnnoMate:latest
+          docker build . --tag ghcr.io/getzlab/annomate:latest
+          docker push ghcr.io/getzlab/annomate:latest
 
